--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8a090a9b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "17c0d453",
    "metadata": {},
    "outputs": [
@@ -45,11 +45,211 @@
     "    print(\"All test cases pass\")\n",
     "test_sort()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3a32aee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Classification Results ===\n",
+      "\n",
+      "Row 1: (50.0, 60.0, 70.0, 10.0) => Classified as 'STANDARD'\n",
+      "Row 3: (200.0, 100.0, 50.0, 25.0) => Classified as 'REJECTED'\n",
+      "Row 4: (150.0, 150.0, 150.0, 30.0) => Classified as 'REJECTED'\n",
+      "Row 6: (85.0, 95.0, 105.0, 20.0) => Classified as 'SPECIAL'\n",
+      "Row 8: (20.0, 30.0, 40.0, 0.0) => Classified as 'STANDARD'\n",
+      "Row 9: (95.0, 105.0, 115.0, 24.0) => Classified as 'REJECTED'\n",
+      "Row 11: (45.0, 55.0, 65.0, 12.0) => Classified as 'STANDARD'\n",
+      "Row 13: (110.0, 120.0, 130.0, 22.0) => Classified as 'REJECTED'\n",
+      "Row 15: (60.0, 70.0, 80.0, 18.0) => Classified as 'STANDARD'\n",
+      "Row 17: (140.0, 150.0, 160.0, 35.0) => Classified as 'REJECTED'\n",
+      "Row 18: (70.0, 80.0, 90.0, 15.0) => Classified as 'STANDARD'\n",
+      "Row 20: (80.0, 90.0, 100.0, 15.0) => Classified as 'STANDARD'\n",
+      "Row 22: (50.0, 60.0, 70.0, 10.0) => Classified as 'STANDARD'\n",
+      "Row 23: (100.0, 100.0, 100.0, 40.0) => Classified as 'REJECTED'\n",
+      "Row 24: (200.0, 100.0, 50.0, 25.0) => Classified as 'REJECTED'\n",
+      "Row 26: (30.0, 40.0, 50.0, 5.0) => Classified as 'STANDARD'\n",
+      "Row 27: (150.0, 150.0, 150.0, 30.0) => Classified as 'REJECTED'\n",
+      "Row 28: (55.0, 65.0, 75.0, 14.0) => Classified as 'STANDARD'\n",
+      "Row 29: (60.0, 80.0, 100.0, 15.0) => Classified as 'STANDARD'\n",
+      "Row 30: (90.0, 100.0, 110.0, 26.0) => Classified as 'SPECIAL'\n",
+      "Row 31: (100.0, 100.0, 100.0, 40.0) => Classified as 'REJECTED'\n",
+      "Row 32: (85.0, 80.0, 75.0, 14.0) => Classified as 'STANDARD'\n",
+      "Row 33: (20.0, 30.0, 40.0, 8.0) => Classified as 'STANDARD'\n",
+      "Row 34: (70.0, 65.0, 60.0, 12.0) => Classified as 'STANDARD'\n",
+      "Row 35: (90.0, 95.0, 100.0, 20.0) => Classified as 'SPECIAL'\n",
+      "Row 36: (55.0, 50.0, 45.0, 10.0) => Classified as 'STANDARD'\n",
+      "Row 37: (65.0, 75.0, 85.0, 16.0) => Classified as 'STANDARD'\n",
+      "Row 39: (95.0, 105.0, 115.0, 24.0) => Classified as 'REJECTED'\n",
+      "\n",
+      "=== Discarded Packages / Internal Processes ===\n",
+      "\n",
+      "Row 2: ['', 'None', '50', '5'] => ERROR: Null or empty fields detected\n",
+      "Row 5: ['60', '80', '100', '-15'] => ERROR: Negative values are not allowed\n",
+      "Row 7: ['100', 'abc', '100', '40'] => ERROR: Failed conversion: non-numeric type\n",
+      "Row 10: ['100', '100', '100'] => ERROR: Incorrect number of columns: 3\n",
+      "Row 12: ['-50', '60', '70', '10'] => ERROR: Negative values are not allowed\n",
+      "Row 14: ['80', '90', '100', '20', '0'] => ERROR: Incorrect number of columns: 5\n",
+      "Row 19: ['', 'None', 'None', 'None'] => ERROR: Null or empty fields detected\n",
+      "Row 21: ['None', 'None', 'None', 'None'] => ERROR: Null or empty fields detected\n",
+      "Row 25: ['100', '', '100', '40'] => ERROR: Null or empty fields detected\n",
+      "Row 38: ['', 'None', '40', '50', '5'] => ERROR: Incorrect number of columns: 5\n",
+      "Row 40: ['None', 'None', 'None', 'None'] => ERROR: Null or empty fields detected\n",
+      "Row 41: ['32', '32', '23ab', '43'] => ERROR: Failed conversion: non-numeric type\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ARTIFACT - raw data\n",
+    "raw_data = \"\"\"Width,Height,Length,Mass\n",
+    "50,60,70,10\n",
+    ",None,50,5\n",
+    "200,100,50,25\n",
+    "150,150,150,30\n",
+    "60,80,100,-15\n",
+    "85,95,105,20\n",
+    "100,abc,100,40\n",
+    "20,30,40,0\n",
+    "95,105,115,24\n",
+    "100,100,100\n",
+    "45,55,65,12\n",
+    "-50,60,70,10\n",
+    "110,120,130,22\n",
+    "80,90,100,20,0\n",
+    "60,70,80,18\n",
+    "Width,Height,Length,Mass\n",
+    "140,150,160,35\n",
+    "70,80,90,15\n",
+    ",None,None,None\n",
+    "80,90,100,15\n",
+    "None,None,None,None\n",
+    "50,60,70,10\n",
+    "\"100\",\"100\",\"100\",\"40\"\n",
+    "200,100,50,25\n",
+    "100,,100,40\n",
+    "30,40,50,5\n",
+    "150,150,150,30\n",
+    "55,65,75,14\n",
+    "60,80,100,15\n",
+    "90,100,110,26\n",
+    "100,100,100,40\n",
+    "85,80,75,14\n",
+    "20,30,40,8\n",
+    "70,65,60,12\n",
+    "90,95,100,20\n",
+    "55,50,45,10\n",
+    "65,75,85,16\n",
+    ",None,40,50,5\n",
+    "95,105,115,24\n",
+    "None,None,None,None\n",
+    "32,32,23ab,43\n",
+    "\"\"\"\n",
+    "\n",
+    "# Classification function\n",
+    "\n",
+    "\n",
+    "def classify_package(width, height, length, mass):\n",
+    "    volume = width * height * length\n",
+    "    heavy = \"heavy\" if mass >= 20 else \"light\"\n",
+    "    bulky = \"bulky\" if volume >= 1_000_000 or width >= 150 or height >= 150 or length >= 150 else \"standard\"\n",
+    "\n",
+    "    if heavy == \"heavy\" and bulky == \"bulky\":\n",
+    "        return \"REJECTED\"\n",
+    "    elif heavy == \"heavy\" or bulky == \"bulky\":\n",
+    "        return \"SPECIAL\"\n",
+    "    else:\n",
+    "        return \"STANDARD\"\n",
+    "\n",
+    "\n",
+    "# Process CSV\n",
+    "lines = raw_data.strip().split('\\n')\n",
+    "\n",
+    "# Control variables\n",
+    "results = []\n",
+    "errors = []\n",
+    "\n",
+    "# Row-by-row processing\n",
+    "for idx, line in enumerate(lines):\n",
+    "    original_line = line.strip()\n",
+    "    fields = [f.strip().replace('\"', '') for f in original_line.split(',')]\n",
+    "\n",
+    "    # Skip duplicated headers\n",
+    "    if fields == ['Width', 'Height', 'Length', 'Mass']:\n",
+    "        continue\n",
+    "\n",
+    "    # Validate the number of columns\n",
+    "    if len(fields) != 4:\n",
+    "        errors.append({\n",
+    "            'line': idx,\n",
+    "            'data': fields,\n",
+    "            'error': f\"Incorrect number of columns: {len(fields)}\"\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # Try to convert to numbers\n",
+    "    try:\n",
+    "        width = float(fields[0]) if fields[0].lower(\n",
+    "        ) != 'none' and fields[0] != '' else None\n",
+    "        height = float(fields[1]) if fields[1].lower(\n",
+    "        ) != 'none' and fields[1] != '' else None\n",
+    "        length = float(fields[2]) if fields[2].lower(\n",
+    "        ) != 'none' and fields[2] != '' else None\n",
+    "        mass = float(fields[3]) if fields[3].lower(\n",
+    "        ) != 'none' and fields[3] != '' else None\n",
+    "    except ValueError:\n",
+    "        errors.append({\n",
+    "            'line': idx,\n",
+    "            'data': fields,\n",
+    "            'error': \"Failed conversion: non-numeric type\"\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # Validate null fields\n",
+    "    if None in [width, height, length, mass]:\n",
+    "        errors.append({\n",
+    "            'line': idx,\n",
+    "            'data': fields,\n",
+    "            'error': \"Null or empty fields detected\"\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # Validate negative values\n",
+    "    if any(val < 0 for val in [width, height, length]) or mass < 0:\n",
+    "        errors.append({\n",
+    "            'line': idx,\n",
+    "            'data': fields,\n",
+    "            'error': \"Negative values are not allowed\"\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # If everything is fine, classify the package\n",
+    "    classification = classify_package(width, height, length, mass)\n",
+    "    results.append({\n",
+    "        'line': idx,\n",
+    "        'data': (width, height, length, mass),\n",
+    "        'classification': classification\n",
+    "    })\n",
+    "\n",
+    "# Print results\n",
+    "print(\"=== Classification Results ===\\n\")\n",
+    "for r in results:\n",
+    "    print(\n",
+    "        f\"Row {r['line']}: {r['data']} => Classified as '{r['classification']}'\")\n",
+    "\n",
+    "print(\"\\n=== Discarded Packages / Internal Processes ===\\n\")\n",
+    "for e in errors:\n",
+    "    print(f\"Row {e['line']}: {e['data']} => ERROR: {e['error']}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stats",
+   "display_name": "llms_env",
    "language": "python",
    "name": "python3"
   },
@@ -63,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
